add search bar and responsive design

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,95 @@
 body, html {
   text-align: center; 
   font-family: 'PT Serif', serif;
-  background: #004080;
-  color: white;
+  color: black;
 }
 
+/* title */
 h1 {
   font-size: 6.0em;
 }
-
+/* Surprise Me button text */
 h2 {
-  font-size: 3.0em;
+  font-size: 1.5em;
+}
+
+#wikiLogo {
+  height: auto;
+  width: 20%;
+  padding-bottom: 15px;
+}
+
+#surpriseMe {
+  background-color: #e6e6e6;
+  padding: 15px;
+  margin: 5px;
+  border-radius: 15px;
+  position: relative;
+  display: inline-block;
+}
+
+footer {
+  position: relative;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  top: 100%;
+  padding: 1rem;
+  text-align: center;
+  color: black;
+}
+
+/* search form element customization */
+input {
+	outline: none;
+}
+input[type=search] {
+	-webkit-appearance: textfield;
+	-webkit-box-sizing: content-box;
+	font-family: inherit;
+	font-size: 150%;
+  color: black;
+}
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button {
+	display: none; 
+}
+input[type=search] {
+	background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+	border: solid 1px #ccc;
+	padding: 9px 10px 9px 32px;
+	width: 150px;
+	
+	-webkit-border-radius: 10em;
+	-moz-border-radius: 10em;
+	border-radius: 10em;
+	
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	transition: all .5s;
+}
+input[type=search]:focus {
+	width: 210px;
+	background-color: #fff;
+	border-color: #66CC75;
+	
+	-webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
+	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
+	box-shadow: 0 0 5px rgba(109,207,246,.5);
+}
+input:-moz-placeholder {
+	color: #999;
+}
+input::-webkit-input-placeholder {
+	color: #999;
+}
+
+/*mobile screens */
+@media (max-width: 800px) and (min-width: 300px) {
+  h1 {
+    font-size: 3em;
+  }
+  h2 {
+    font-size: 0.8em;
+  }
 }
